--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="css/app.css">
+ 
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
+  <link href="bower_components/angular-material-data-table/dist/md-data-table.css" rel="stylesheet" type="text/css"/>
+  <link rel="stylesheet" href="css/app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body >
@@ -38,13 +40,18 @@
   <!-- Angular Material Library -->
   <script src="bower_components/angular-material/angular-material.min.js"></script>
 
+  <script type="text/javascript" src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
+
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
 
 
   <script src="app.js"></script>
   <script src="bundle.js"></script> 
 
-  <script src="controllers/home.js"></script>
+  <script src="controllers/homeCtrl.js"></script>
+  <script src="controllers/gameCtrl.js"></script>
+
+  <script src="services/tournamentStore.js"></script>
 
 </body>
 </html>
