--- a/www/index.html
+++ b/www/index.html
@@ -48,8 +48,10 @@
   <script src="app.js"></script>
   <script src="bundle.js"></script> 
 
+<script src="controllers/gameDialogCtrl.js"></script>
   <script src="controllers/homeCtrl.js"></script>
   <script src="controllers/gameCtrl.js"></script>
+  
 
   <script src="services/tournamentStore.js"></script>
 
