--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,8 @@
   <!-- Angular Material Library -->
   <script src="bower_components/angular-material/angular-material.min.js"></script>
 
+  <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+
   <script type="text/javascript" src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
 
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
@@ -48,9 +50,11 @@
   <script src="app.js"></script>
   <script src="bundle.js"></script> 
 
-<script src="controllers/gameDialogCtrl.js"></script>
   <script src="controllers/homeCtrl.js"></script>
-  <script src="controllers/gameCtrl.js"></script>
+  <script src="controllers/createCtrl.js"></script>
+  <script src="controllers/gameDialogCtrl.js"></script>
+  <script src="controllers/tournamentCtrl.js"></script>
+
   
 
   <script src="services/tournamentStore.js"></script>
