--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
 
   <!-- Angular Material Library -->
   <script src="bower_components/angular-material/angular-material.min.js"></script>
+  <script src="bower_components/angular-messages/angular-messages.js"></script>
 
   <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
