--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -39,13 +39,13 @@
 
   <!-- Angular Material Library -->
   <script src="bower_components/angular-material/angular-material.min.js"></script>
-  <script src="bower_components/angular-messages/angular-messages.js"></script>
 
   <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
   <script type="text/javascript" src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
 
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
+  <script src="bower_components/Sortable/Sortable.min.js"></script>
 
 
   <script src="app.js"></script>
